Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18625

parallel-scale-nfsv3 test_2: Failed (owc:0 < nwc:1)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.17.0
    • None
    • None
    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run:
      https://testing.whamcloud.com/test_sets/a9b839bb-6fb9-4ed2-ba9b-544a256eac62

      test_2 failed with the following error:

      Failed (owc:0 < nwc:1)
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master-next/846 - 5.14.0-427.42.1.el9_4.x86_64
      servers: https://build.whamcloud.com/job/lustre-b2_14/8 - 4.18.0-348.7.1.el8_lustre.x86_64

      [This subtest has been failing intermittently since the time the test was landed|https://testing.whamcloud.com/search?status%5B%5D=FAIL&test_set_script_id=77ee796c-54b8-11e1-9fd4-5254004bbbd3&sub_test_script_id=38054869-b2f6-46ff-ad55-1c88d5e8b63e&start_date=2024-12-11&end_date=2025-01-04&source=sub_tests#redirect
      ] in patch https://review.whamcloud.com/56488 ("LU-17692 llite: flock work with lockd") on 2024-12-16 on master, 2024-12-30 on b_es6_0:

      I think there may be multiple issues:

      • depending on where the NFS server is running (on the MDS?) it should have an MDS version check to skip running in interop mode, as there seem to be a lot of failures during interop testing
      • it does appear that this can also fail even with same-version servers that have the patch applied, so possibly it is just a race and the interop failures are misleading?

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      parallel-scale-nfsv3 test_2 - Failed (owc:0 < nwc:1)

            ys Yang Sheng
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: